# Spatial-Reasoning-Benchmarks

./: .gitignore  README.md  pyproject.toml
spatial_benchmarks/: __init__.py  multihop.py  refspatial_bench.py  refspatial_expand.py  spatialcorpus.py  spatialscore.py
tests/: test_spatialscore_parse.py
